adjusted FilsStash class and added FileStash preference page.